--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,16 +23,12 @@ jobs:
       - run:
           name: Install dependencies in docker image
           command: |
-            docker build --target=builder --cache-from=recep_service -t builder .
+            docker build --rm=false --cache-from=recep_service -t builder .
       - run:
           name: Extract gradle cache from docker image
           command: |
             set +o pipefail
             docker run --rm builder tar -cC /home/gradle/.gradle . | tar -xC .gradle-cache
-      - run:
-          name: Build docker image
-          command: |
-            docker build -t recep_service .
       - run:
           name: Save Docker image layer cache
           command: |
@@ -46,12 +42,3 @@ jobs:
           key: gradle-cache-{{ checksum "build.gradle.kts" }}
           paths:
             - .gradle-cache
-      - deploy:
-          name: Push application Docker image
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              login="$(aws ecr get-login)"
-              ${login}
-              docker tag recep_service "${ECR_ENDPOINT}/recep_service:${CIRCLE_SHA1}"
-              docker push "${ECR_ENDPOINT}/recep_service:${CIRCLE_SHA1}"
-            fi
