--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - gradle-cache-{{ checksum "build.gradle" }}
+            - gradle-cache-{{ checksum "build.gradle.kts" }}
             - gradle-cache
       - restore_cache:
           keys:
@@ -28,7 +28,7 @@ jobs:
       - save_cache:
           paths:
             - ~/.gradle/caches/
-          key: gradle-cache-{{ checksum "build.gradle" }}
+          key: gradle-cache-{{ checksum "build.gradle.kts" }}
 
       - run:
           name: Collecting Gradle Build Caches
